fixing spacing issues & making fade-in load faster
title

--- a/src/app/css/about.css
+++ b/src/app/css/about.css
@@ -99,7 +99,7 @@
 
     .about-content {
         padding-top: 10vh;
-        padding-bottom: 5vh;
+        padding-bottom: 0px;
         margin-left: 5vw;
         margin-right: 5vw;
         text-align: center;
