--- a/src/app/css/schedule.css
+++ b/src/app/css/schedule.css
@@ -125,5 +125,6 @@ td {
         width: 100%; 
         border-radius: 5px;
         overflow: hidden;
+        margin-bottom: 100px;
     }
 }
